--- a/apps/api/tsconfig.vitest.json
+++ b/apps/api/tsconfig.vitest.json
@@ -1,15 +1,16 @@
 {
-  "extends": "@workspace/typescript-config/tsconfig.nestjs.json",
-  "compilerOptions": {
-    "types": ["vitest/globals", "node"],
-    "noEmit": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  },
-  "include": ["src/**/*","src/__tests__/**/*"],
-  "exclude": ["node_modules", "dist", "build"]
+    "extends": "@workspace/typescript-config/tsconfig.nestjs.json",
+    "compilerOptions": {
+        "types": ["vitest/globals", "node"],
+        "noEmit": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "baseUrl": "./",
+        "ignoreDeprecations": "6.0",
+        "paths": {
+            "@/*": ["src/*"]
+        }
+    },
+    "include": ["src/**/*", "src/__tests__/**/*"],
+    "exclude": ["node_modules", "dist", "build"]
 }
