--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "@workspace/typescript-config/tsconfig.nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@/*": ["./src/*"],
-      "@workspace/ui/*":["../../packages/ui/src/*"],
+      "@workspace/ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": [
