--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boilerplate",
   "type": "module",
   "scripts": {
-    "dev": "turbo run dev",
+    "start:dev": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
