feat : add fixes

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -23,8 +23,8 @@
     }
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsc -p tsconfig.schemas.json",
+    "dev": "tsc -p tsconfig.schemas.json --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "check-types": "tsc --noEmit",
