--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "@nestjs/swagger": "11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
+    "@workspace/domain": "workspace:*",
     "@workspace/database": "workspace:*",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.5",
@@ -45,6 +46,7 @@
     "class-validator": "0.14.2",
     "dayjs": "^1.11.19",
     "drizzle-orm": "0.44.7",
+    "googleapis": "^152.0.0",
     "keyv": "^5.5.4",
     "nestjs-cls": "^6.1.0",
     "nestjs-pino": "^4.5.0",
