--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8000",
+    "start:dev": "vite --port 8000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite preview",
@@ -28,6 +29,7 @@
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.108.10",
     "@workspace/ui": "workspace:*",
+    "@workspace/domain": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
