--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,7 +26,9 @@
     "ignoreDeprecations": "5.0",
     "paths": {
       "@/*": ["./src/*"],
-      "@workspace/ui/*": ["../../packages/ui/src/*"]
+      "@workspace/ui/*": ["../../packages/ui/src/*"],
+      "@workspace/domain": ["../../packages/domain/src/index.ts"],
+      "@workspace/domain/*": ["../../packages/domain/src/*"]
     }
   },
   "include": ["src", "vite.config.ts", "vitest.config.mts"],
