--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,10 +28,13 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.108.10",
-    "@workspace/ui": "workspace:*",
+    "@tanstack/react-table": "^8.21.3",
     "@workspace/domain": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.31.0",
     "lucide-react": "^0.561.0",
     "openapi-fetch": "^0.15.0",
     "openapi-react-query": "^0.5.1",
