--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8000",
-    "start:dev": "vite --port 8000",
+    "dev": "vite --port 5173",
+    "start:dev": "vite --port 5173",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite preview",
@@ -36,8 +36,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.31.0",
     "lucide-react": "^0.561.0",
-    "openapi-fetch": "^0.15.0",
-    "openapi-react-query": "^0.5.1",
+    "axios": "^1.12.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
