--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "@fastify/etag": "^6.1.0",
     "@fastify/middie": "^9.0.0",
     "@fastify/static": "^8.0.0",
     "@keyv/redis": "^5.1.4",
@@ -41,8 +42,8 @@
     "@nestjs/swagger": "11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
-    "@workspace/domain": "workspace:*",
     "@workspace/database": "workspace:*",
+    "@workspace/domain": "workspace:*",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.5",
     "class-transformer": "0.5.1",
