--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,8 @@
   "extends": "@workspace/typescript-config/tsconfig.react-library.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
+    "isolatedDeclarations": false,
     "paths": {
       "@workspace/ui/*": ["./src/*"]
     }
