--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -2,6 +2,8 @@
     "extends": "@workspace/typescript-config/tsconfig.nestjs.json",
     "compilerOptions": {
         "baseUrl": "./",
+        "ignoreDeprecations": "6.0",
+        "isolatedDeclarations": false,
         "paths": {
             "@/*": ["src/*"]
         }
