--- a/apps/api/tsconfig.vitest.json
+++ b/apps/api/tsconfig.vitest.json
@@ -6,6 +6,8 @@
         "noUnusedLocals": false,
         "noUnusedParameters": false,
         "baseUrl": "./",
+        "ignoreDeprecations": "6.0",
+        "isolatedDeclarations": false,
         "paths": {
             "@/*": ["src/*"]
         }
