--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,17 +31,18 @@
     "@tanstack/react-table": "^8.21.3",
     "@workspace/domain": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.31.0",
     "lucide-react": "^0.561.0",
-    "axios": "^1.12.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
