--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,7 +23,8 @@
 
     /* Paths */
     "baseUrl": ".",
-    "ignoreDeprecations": "5.0",
+    "ignoreDeprecations": "6.0",
+    "isolatedDeclarations": false,
     "paths": {
       "@/*": ["./src/*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"],
