--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jiti": "2.6.1",
     "prettier": "^3.7.4",
     "syncpack": "14.0.0-alpha.32",
+    "tsx": "^4.21.0",
     "turbo": "^2.6.3",
     "typescript": "^5.9.3"
   },
