--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -86,6 +86,8 @@
   },
   "exports": {
     "./globals.css": "./src/styles/index.css",
+    "./styles/neumorphism.css": "./src/styles/neumorphism.css",
+    "./styles/glassmorphism.css": "./src/styles/glassmorphism.css",
     "./postcss.config": "./postcss.config.mjs",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
